--- a/archives.html
+++ b/archives.html
@@ -14,10 +14,13 @@
                 <h1><a href="https://ruilin-ma.github.io/">Lab 5 Site</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
+            <li><a href="https://ruilin-ma.github.io/category/blog.html">Blog</a></li>
         </ul></nav><!-- /#menu -->
 <h1>Archives for Lab 5 Site</h1>
 
 <dl>
+    <dt>Mon 07 January 2019</dt>
+    <dd><a href="https://ruilin-ma.github.io/my-first-article.html">My First Article</a></dd>
 </dl>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
