--- a/authors.html
+++ b/authors.html
@@ -14,9 +14,11 @@
                 <h1><a href="https://ruilin-ma.github.io/">Lab 5 Site</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
+            <li><a href="https://ruilin-ma.github.io/category/blog.html">Blog</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Authors on Lab 5 Site</h1>
     <ul>
+        <li><a href="https://ruilin-ma.github.io/author/ruilin-ma.html">Ruilin Ma</a> (1)</li>
     </ul>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
