--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
                 <h1><a href="https://ruilin-ma.github.io/">Lab 5 Site</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
+            <li><a href="https://ruilin-ma.github.io/category/blog.html">Blog</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Tags for Lab 5 Site</h1>
     <ul>
